Fixed style issues and optimized keys

--- a/src/components/Table/Table.module.css
+++ b/src/components/Table/Table.module.css
@@ -1,5 +1,6 @@
 table {
-  border-spacing: 0;
+  border-collapse: separate;
+  border-spacing: 0 0.25rem;
 }
 
 tr {
@@ -7,7 +8,7 @@ tr {
 }
 
 td {
-  padding: 0.5rem 1.5rem;
+  padding: 0.5rem 2.5rem;
   text-align: center;
 }
 
@@ -21,6 +22,10 @@ td {
   flex-direction: column;
 }
 
+.table-header {
+  padding: 0.5rem 2.5rem;
+}
+
 .table-title {
   font-size: 1.5rem;
   padding-bottom: 2rem;
@@ -29,10 +34,6 @@ td {
 
 .table-data-item {
   color: #b3b3b3;
-}
-
-.table-spacer {
-  margin: 0.15rem 0;
 }
 
 .table-footer {
@@ -46,4 +47,20 @@ td {
 .table-btn {
   font-size: 0.75rem;
   margin: 0 0.25rem;
+  background-color: #51667e;
+  color: #ffffff;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.table-btn:disabled {
+  cursor: not-allowed;
+  background-color: #a0acb8;
+  color: #d3d9e0; 
+  opacity: 0.7;
+}
+
+.pagesize-label {
+  padding-right: 0.5rem;
 }
